--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -6,6 +6,7 @@
     <title>Homework1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="res/css/style.css">
+    <link rel="icon" href="res/images/logo.png">
     
 </head>
 <body>
@@ -14,7 +15,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="addPost.html">addPost</a></li>
         </ul>
-
+        <a class="default_logo" href="#"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
     </header>
 
 
