--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -15,9 +15,22 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="addPost.html">addPost</a></li>
         </ul>
-        <a class="default_logo" href="#"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
+        <a class="logo" href="#"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
     </header>
 
+
+
+
+
+
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href="#">FOOTER</a>
+            </li>
+
+        </ul>
+    </footer>
 
 </body>
 </html>
