--- a/Homework_1/login.html
+++ b/Homework_1/login.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="res/css/style.css">
+    <link rel="icon" href="res/images/logo.png">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
