--- a/Homework_1/login.html
+++ b/Homework_1/login.html
@@ -32,9 +32,9 @@
         
         <div class="login-form">
             <form action="index.html">
-                <input type="email" id="email" placeholder="Email" name="email" required> <br>
-                <input type="password" id="password" placeholder="Password" name="email" required> <br>
-                <input type="submit" class="login" value="Log in">
+                <input type="email" style="height: 30px; margin: 5px;" id="email" placeholder="Email" name="email" required> <br>
+                <input type="password" style="height: 30px; margin: 5px;" id="password" placeholder="Password" name="email" required> <br>
+                <input type="submit" class="submit" value="Log in">
             </form>
         </div>
         
