--- a/Homework_1/addPost.html
+++ b/Homework_1/addPost.html
@@ -3,13 +3,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="res/images/logo.png">
+    <link rel="stylesheet" href="res/css/style.css">
     <title>Add post</title>
   </head>
   <body>
-    <div class="flex-container">
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
+    <div>
+    <form>
+        <label for="pbody">Post body:</label>
+        <input type="text" id="pbody" name="pbody" />
+        <input type="submit" value="Create post" />
+      </form>
     </div>
   </body>
 </html>
