--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -16,7 +16,7 @@
             <li><a href="addPost.html">addPost</a></li>
             
         </ul>
-        <a class="logo" href="#"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
+        <a class="logo" href="login.html"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
     </header>
 
     <div class="middle">
