--- a/Homework_1/addPost.html
+++ b/Homework_1/addPost.html
@@ -21,15 +21,17 @@
   <div class="flex-login">
     <form>
       <div class="add-post">
-        <p class="formfield"><label for="pbody">Post body:</label>
-          <textarea class="pbody" id="pbody" name="pbody" rows="8" cols="40"></textarea>
+        <p class="formfield">
+          <label for="pbody">Post body:</label>
+          <textarea id="pbody" name="pbody" rows="8" cols="40"></textarea>
         </p>
-        <p class="formfield"><label for="pimage">Select file:</label>
-          <input type="file" id="pimage" name="pimage" , accept="image/*">
+        <p class="formfield">
+          <label for="pimage">Select file:</label>
+          <input type="file" id="pimage" name="pimage" accept="image/*">
         </p>
       </div>
       <div>
-        <input type="submit" value="Create post" />
+        <input id="create-post-button" type="submit" value="Create post" />
       </div>
     </form>
 </body>
