--- a/Homework_1/addPost.html
+++ b/Homework_1/addPost.html
@@ -15,7 +15,7 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
     </ul>
-    <a class="logo" href="#"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
+    <a class="logo" href="login.html"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
   </header>
 
   <div class="flex-login">
