--- a/Homework_1/addPost.html
+++ b/Homework_1/addPost.html
@@ -23,7 +23,7 @@
       <div class="add-post">
         <p class="formfield">
           <label for="pbody">Post body:</label>
-          <textarea id="pbody" name="pbody" rows="8" cols="40"></textarea>
+          <textarea id="pbody" name="pbody" rows="8" maxlength="500"></textarea>
         </p>
         <p class="formfield">
           <label for="pimage">Select file:</label>
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div>
-        <input id="create-post-button" type="submit" value="Create post" />
+        <input id="cool-button" type="submit" value="Create post" />
       </div>
     </form>
 </body>
