--- a/Homework_1/login.html
+++ b/Homework_1/login.html
@@ -34,7 +34,7 @@
             <form action="index.html">
                 <input type="email" style="height: 30px; margin: 5px;" id="email" placeholder="Email" name="email" required> <br>
                 <input type="password" style="height: 30px; margin: 5px;" id="password" placeholder="Password" name="email" required> <br>
-                <input type="submit" class="submit" value="Log in">
+                <input id="cool-button" type="submit" class="submit" value="Log in">
             </form>
         </div>
         
