alot of cahnges

--- a/Homework_1/addPost.html
+++ b/Homework_1/addPost.html
@@ -18,7 +18,7 @@
     <a class="logo" href="login.html"><img src="res/images/me.png" width="50" height="50" alt="My picture"></a>
   </header>
 
-  <div class="flex-login">
+  <div class="center_box">
     <form>
       <div class="add-post">
         <p class="formfield">
