--- a/Homework_2/index.html
+++ b/Homework_2/index.html
@@ -7,6 +7,7 @@
     <title>Homework1</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="res/css/style.css">
+    <script type="text/javascript" src="src/js/script.js"></script>
     <link rel="icon" href="res/images/logo.png">
 </head>
 
