--- a/Homework_2/addPost.html
+++ b/Homework_2/addPost.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="res/css/style.css">
   <link rel="icon" href="res/images/logo.png">
   <title>Add post</title>
+  <script type="text/javascript" src="src/js/script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,8 +16,21 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
     </ul>
-    <a class="logo" href="login.html"><img id="profile_pic" src="res/images/me.png" width="50" height="50"
-        alt="My picture"></a>
+    <div class="user_profile">
+      <img
+        class="logo"
+        id="profile_pic"
+        src="res/images/me.png"
+        width="50"
+        height="50"
+        onclick="toggleUserMenu()"
+      />
+      <div id="userMenu" class="drop-menu">
+        <a href="#">John Doe</a>
+        <a href="#">john.doe@ut.ee</a>
+        <a href="login.html">Log out</a>
+      </div>
+    </div>
   </header>
 
   <div class="center_box">
