--- a/Homework_2/login.html
+++ b/Homework_2/login.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="res/images/logo.png">
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="src/js/script.js"></script>
 </head>
 
 <body>
@@ -15,8 +16,6 @@
         <ul class="nav">
             <li><a href="index.html">Home</a></li>
         </ul>
-        <a class="logo" href="#"><img id="profile_pic" src="res/images/me.png" width="50" height="50"
-                alt="My picture"></a>
     </header>
 
     <div class="center_box">
